[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/Mark Smin/Mark.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UI/UI_health.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Spawn/Spawn2.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Soundtrack-BG.mp3" type="AudioStream" id=5]
[ext_resource path="res://data/grass.shader" type="Shader" id=6]
[ext_resource path="res://src/Spawn/Spawn.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/AutoLoader/spawn_data.gd" type="Script" id=11]

[sub_resource type="ProceduralSky" id=54]
sky_top_color = Color( 1, 1, 1, 1 )
sky_horizon_color = Color( 0.827451, 0, 1, 1 )
ground_bottom_color = Color( 0.768627, 0.517647, 0.0352941, 1 )
ground_horizon_color = Color( 0.858824, 0.0235294, 0.886275, 1 )

[sub_resource type="Environment" id=55]
background_mode = 2
background_sky = SubResource( 54 )

[sub_resource type="SpatialMaterial" id=97]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="ShaderMaterial" id=58]
shader = ExtResource( 6 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 20, 20, 0.414 )

[sub_resource type="Skin" id=52]

[sub_resource type="BoxShape" id=3]
extents = Vector3( 10, 10, 0.1 )

[node name="Main" type="Node"]
script = ExtResource( 11 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 55 )

[node name="Mark" parent="." instance=ExtResource( 1 )]
transform = Transform( -0.734902, 0, -0.678172, 0, 1, 0, 0.678172, 0, -0.734902, 7.00313, 1.37953, 7.89694 )

[node name="Main Platform" type="MeshInstance" parent="."]
transform = Transform( 1, 0, -4.37114e-08, -4.37114e-08, 1.91068e-15, -1, 0, 1, 1.91069e-15, 0, -0.314819, 0 )
material_override = SubResource( 97 )
material_overlay = SubResource( 58 )
mesh = SubResource( 2 )
skin = SubResource( 52 )
skeleton = NodePath("")

[node name="StaticBody" type="StaticBody" parent="Main Platform"]
transform = Transform( 0.999985, 0.00552046, 0.000356685, -0.00552031, 0.999985, -7.83354e-05, -0.000357114, 7.63573e-05, 1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Main Platform/StaticBody"]
transform = Transform( 0.999986, -0.0053116, -0.000343599, 0.00531175, 0.999986, 7.35e-05, 0.000343195, -7.53626e-05, 1, -0.00952339, 0.0273771, -0.204713 )
shape = SubResource( 3 )

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="UI2" parent="UILayer" instance=ExtResource( 3 )]

[node name="Spawn" parent="." instance=ExtResource( 9 )]
transform = Transform( -0.999822, 0.000285403, -0.0188812, 0, 0.999886, 0.015114, 0.0188834, 0.0151113, -0.999708, -9.07026, 0.0353143, 9.56344 )

[node name="Spawn2" parent="." instance=ExtResource( 4 )]
transform = Transform( 0.0105416, 0, 0.999944, 0, 1, 0, -0.999944, 0, 0.0105416, -9.38287, 0.144895, -8.98731 )

[node name="Spawn3" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.94539, 0.144895, -9.40498 )

[node name="SpawnTimer3" type="Timer" parent="."]
wait_time = 3.4
autostart = true

[node name="SpawnTimer2" type="Timer" parent="."]
wait_time = 2.1
autostart = true

[node name="Timer" type="Timer" parent="."]
wait_time = 2.4
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -7.0
autoplay = true

[connection signal="timeout" from="SpawnTimer3" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="SpawnTimer2" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
